flicker fix?

--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -1,4 +1,4 @@
-@import url("https://api.fontshare.com/v2/css?f[]=satoshi@700,500,300,400&display=swap");
+@import url("https://api.fontshare.com/v2/css?f[]=satoshi@700,500,300,400&display=optional");
 * {
   margin: 0;
   padding: 0;
@@ -37,7 +37,7 @@ body {
   z-index: 2;
 
   .logo {
-    background-image: url(../assets/logos/logo.svg);
+    background-image: url(../../assets/logos/logo.svg);
     width: 25px;
     height: 25px;
     background-repeat: no-repeat;
